Add findAll endpoint